Fix menu on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -35,7 +35,7 @@
 
 // variables.less
 $theme-primary: white;
-$theme-dark: #222;
+$theme-dark: #444;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
